# world-infrastructure-data-hub

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_source.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  release-drafter.yml
docs/: paid-upgrades.md
docs/architecture/: README.md  data-flow.md  overview.md
docs/architecture/adr/: 0000-template.md  0001-static-first-architecture.md  0002-unified-and-per-country-dataset-shape.md  0003-trip-calculator-runs-client-side.md  0004-raw-response-archival-and-replay.md  0005-free-data-first-with-paid-upgrade-paths.md  README.md  (+2 more)
docs/runbooks/: README.md  add-new-country.md  add-new-metric.md  release.md  rollback.md  upstream-feed-failure.md
docs/screenshots/: README.md
libraries/csharp/: README.md  WorldInfraData.csproj  WorldInfraDataClient.cs
libraries/flutter/: README.md  pubspec.yaml
libraries/go/: README.md  go.mod  infradata.go
libraries/python/: README.md  pyproject.toml
libraries/python/world_infra_data/: __init__.py
libraries/typescript/: README.md  build.mjs  package.json  tsconfig.json
schemas/: countries.schema.json
scripts/: generateData.js  takeScreenshots.mjs  validateDataset.mjs
scripts/lib/: helpers.mjs
src/: App.tsx  index.css  types.ts
test/: helpers.test.mjs  normalizeBaseUrl.test.mjs
(+9 files in other folders)
