[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "world-infra-data"
version = "1.0.0"
description = "Python client for the World Infrastructure Data Hub open data API."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "aykutsp" }]
keywords = ["fuel-prices", "electricity", "ev-charging", "co2", "world-bank", "open-data"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://aykutsp.github.io/world-infrastructure-data-hub/"
Repository = "https://github.com/aykutsp/world-infrastructure-data-hub"

[tool.setuptools]
packages = ["world_infra_data"]
